# octoprint_sidebar_macros

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
extras/: README.txt  macro.md  sidebar_macros.md
octoprint_macro/: __init__.py
octoprint_sidebar_macros/: __init__.py
octoprint_sidebar_macros/static/css/: sidebar_macros.css
octoprint_sidebar_macros/static/js/: sidebar_macros.js  sidebar_macros_settings.js
octoprint_sidebar_macros/static/less/: sidebar_macros.less
octoprint_sidebar_macros/templates/: sidebar_macros_settings.jinja2  sidebar_macros_sidebar.jinja2
translations/: README.txt
