[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Sidebar-Macros"
version = "0.3.3"
description = "OctoPrint plugin to create various GCODE macros and display them in the sidebar menu."
authors = [
    { name = "Mikhail Poluboyarinov", email = "mikle.sol@gmail.com" },
]
maintainers = [
    { name = "apbarratt", email = "andy@barratt.scot" },
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license",
]

requires-python = ">=3.7, <4"

dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_sidebar_macros",
    "octoprint_sidebar_macros.*",
]

[project.entry-points."octoprint.plugin"]
macro = "octoprint_sidebar_macros"

[project.urls]
Homepage = "https://github.com/apbarratt/octoprint_sidebar_macros"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]
