[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Sidebar-Macros"
version = "0.4.0"
description = "OctoPrint plugin to create various GCODE macros and display them in the sidebar menu."
authors = [
    { name = "Mikhail Poluboyarinov", email = "mikle.sol@gmail.com" },
]
maintainers = [
    { name = "apbarratt", email = "andy@barratt.scot" },
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license",
]

requires-python = ">=3.7, <4"

dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_sidebar_macros",
    "octoprint_sidebar_macros.*",
]

[project.entry-points."octoprint.plugin"]
macro = "octoprint_sidebar_macros"

[project.urls]
Homepage = "https://github.com/apbarratt/octoprint_sidebar_macros"

[project.optional-dependencies]
develop = [
    "go-task-bin",
    "pre-commit",
    "ruff",
]

[tool.ruff]
target-version = "py37"
line-length = 90
indent-width = 4

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W",
    "B9",
]
ignore = [
    "E203",
    "E231",
    "E265",
    "E266",
    "E402",
    "E501",
    "E731",
    "E741",
    "W605",
    "C901",
]
fixable = ["I", "C4", "E"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["octoprint_sidebar_macros"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"
